# freqgen

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: prompts.yaml  tags.yaml
data/names/: de.yaml  en.yaml  gemma.yaml
data/tags/: deepseek.yaml  gemma.yaml  gemma3n.yaml  qwen.yaml
dotenv/: local.env  prod.env
freqgen/: api.py  config.py  data.py  model.py
