[project]
name = "freqgen"
version = "0.1.0"
description = "Generate radio station metadata based on user input."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "pydantic-yaml>=1.5.1",
    "sentence-transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "ruff>=0.12.2",
]

[tool.uv]
default-groups = []
